# SemEval26-Task9-POLAR-Aatman

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
data_eda/: subtask1-eda.ipynb
experiments/: README.md  polar-subtask1-m-bert.ipynb  polar-subtask1-xlm-roberta.ipynb
experiments/encoder_models_finetuing/: polar-subtask1-glot-500.ipynb  polar-subtask1-hate-bert.ipynb  polar-subtask1-m-bert.ipynb  polar-subtask1-m-deberta-wo-lora.ipynb  polar-subtask1-m-deberta.ipynb  polar-subtask1-m-gte-multilingual-mlm-base.ipynb  polar-subtask1-mm-bert.ipynb  polar-subtask1-xlm-roberta.ipynb
experiments/few_shot_classification/: polar-subtask1-llama3-1-8b-instruct.ipynb  polar-subtask1-qwen3-8b.ipynb
experiments/instruction_finetuning/: polar-subtask1-llama-guard-3-8b.ipynb  run_training.sh  train_llama_guard.py
experiments/safety/: llama-guard-vllm.ipynb  llama-guard.ipynb
experiments/transfer_learning/create_pretraining_data/: merge.py  temp.py
experiments/transfer_learning/create_pretraining_data/datasets/: hate_check_hi.csv  hatexplain.csv  implicit_hate.csv  olid.csv  toxigen.csv  uli.csv
experiments/zero_shot_classification/: polar-sbutask1-qwen2.5-14b-instruct.ipynb
