[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.16.0",
    "evaluate>=0.4.0",
    "pandas>=2.0.0",
    "peft>=0.7.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.14",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "trl>=0.7.0",
]
